--- a/style.css
+++ b/style.css
@@ -2,12 +2,13 @@
     margin:0;
     padding:0;
     box-sizing: border-box;
-    font-family: cursive;
+    font-family: "Mansalva", sans-serif;
 }
 
 html,body{
     width: 100%;
     height: 100%;
+    
 }
 
 
@@ -81,16 +82,26 @@ html,body{
 }
 
 .head{
+    font-family: "Rubik Glitch Pop", system-ui;
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
     text-transform: uppercase;
+    text-decoration: line-through;
+    text-decoration-thickness: 0.5vw;
+    text-decoration-color: #ef3012;
     color: #EFFFFD;
     font-size: 7vw;
     width: 100%;
     text-align: center;
 }
+
+
+.head::first-letter{
+    color: #16d608;
+}
+
 
 img{
     width: 20vw;
